--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <li>爬虫： Scrapy(熟练)/python_requests(熟练)/熟练scrapy-redis分布式爬虫</li>
                 <li>数据清洗： xpath(熟练)/lxml(熟练)/bs4(熟练)/Regex(熟练)/json(熟练)</li>
                 <li>数据库： MySQL(熟练)/redis(熟练)/sqlite(熟练)</li>
-                <li>熟练使用Selenium实施动态HTML抓取</li>
+                <li>解决网页动态加载：熟练使用Selenium实施动态HTML抓取</li>
                 <li>服务器相关： 熟悉Linux基本命令/了解docker基本操作</li>
                 <li>版本控制软件： 熟练使用git/svn等源代码版本控制工具</li>
-                <li>常用软件： fiddle、wireshark、pycharm、jupyter notebook、</li>
+                <li>常用软件： fiddle、wireshark、pycharm、jupyter notebook、sublime</li>
             </ul>
         </div>
     </div>
@@ -89,10 +89,10 @@
                     在此项目中我主要负责项目的运维工作，主要是对软件运行过程中出现的问题做及时的记录，并反馈结果给开发人员。
                     这些项目中，我主要学习了软件的运作流程，自己在空闲的时候看一些编程类的书籍，这段时间成长特别快，得到了领导的表扬。
                 </span>
-                <span class="project-title">大润发e路通（app）</span>
+                <span class="project-title">大润发e路通数据抽取（app）</span>
                 <span class="tools">开发工具： python + requests + fiddle </span>
                 <span class="project-intro">
-                    该项目的主要目的是抓取app上面的关于健康类商品的价格，以便于给客户推送价格合适的代理产品，技术点主要是使用fiddle
+                    该项目的主要目的是抓取app上面的关于健康类商品的价格，以便于给客户推送价格合理价格的代理产品，技术点主要是使用fiddle
                     抓取app的数据包，数据包的逻辑分析，模仿app请求的数据伪造，利用postman软件对伪造请求进行测试。对服务器返回响应的解析和存储，难点主要在于在于获得响应
                     数据之后如何构造下一次请求，对响应数据的清洗及入库。
                     <br>项目地址：<a href="#" style="color: blue">www</a>以对公司源码保密为原则只提供部分代码
@@ -108,12 +108,14 @@
             </div>
 
             <div class="company">
-                <h2>石家庄科林电气股份有限公司（xxxx年xx月-xxxx年xx月）</h2>
-                <span class="tools">开发工具： xxx + xxxx + xxx + xxxxx + xxxx </span>
-
-                <span class="project-title">xxx项目</span>
+                <h2>石家庄科林电气股份有限公司（2017年8月）</h2>
+                <span class="project-title">用电信息云平台</span>
+                <span class="tools">开发工具： pycharm + Django </span>
                 <span class="project-intro">
-                    我在此项目负责了哪些工作，这个项目中，有什么里给我最深刻的印象，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
+                    该项目主要是开发的主要目的是为用户提供一个便捷的用电信息查看、快捷缴费、用电历史纪录、每月用电量曲线图（互联网+）。
+                    我在此项目主要负责了用户注册，登录，密码的重置，QQ、微信等第三方登录，本项目的技术点是图片验证码部分使用的是一个
+                    第三方包（基于pillow）,注册通过手机号注册（使用阿里云短信库），手机号验证码存储到redis中。QQ、微信主要涉及的是
+                    OAuth认证。除此之外还参与了用户中心的编写，技术点包括用户权限的验证，用电信息的反馈，基本信息的展示等等，
                 </span>
             </div>
         </div>
@@ -126,14 +128,9 @@
         <div class="detail-list">
             <ul>
                 <li>
-                    <span class="source-name">项目名称：xxxx</span><br>
-                    <span>一款使用Spring Framework + AngularJS写的单页应用博客系统，使用MyBatis作为ORM框架，写作语法支持Markdown。部署在阿里云的CentOS服务器上，使用Nginx作的权限控制和端口转发。</span>
+                    <span class="source-name">项目名称：M-blog</span><br>
+                    <span>一款使用python + flask写的应用博客系统，使用MyBatis作为ORM框架，写作语法支持python3。</span>
                     <span class="source-url">源代码地址：<a href="#">www.xxxxxx.com</a></span>
-                </li>
-                <li>
-                    <span class="source-name">项目名称：xxxx</span><br>
-                    <span>里边存放了从开始学写代码后的一些记录，ACM刷题、Java学习、Android学习、框架以及其他的学习，并有使用JS、Java、Android写过的一些小东西。</span>
-                    <span class="source-url">地址：<a href="#">www.xxxxxx.com</a></span>
                 </li>
             </ul>
         </div>
