--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="clear-fix"></div>
     </div>
 </div>
-
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1275375838'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s5.cnzz.com/z_stat.php%3Fid%3D1275375838%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
 <script type="text/javascript">
     var windowWidth =  document.body.clientWidth;
     var templateWidth = 320;
