--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>牛少波的个人简历</title>
     <link rel="stylesheet" href="static/css/base.css" media="screen and (min-width: 840px)" />
     <link rel="stylesheet" href="static/css/style.css" media="screen and (max-width: 839px)"  />
+    <script src="static/js/is_pc.js"></script>
 </head>
 <body>
-
 <div id="top">
     <span class="top-title">牛少波的个人简历</span>
 </div>
@@ -111,8 +111,6 @@
                     <span style="text-indent: 2em">6.对服务器返回响应的清洗和存储；</span>
                     <span style="text-indent: 2em">难点主要在于该软件的响应数据使用的是POST的raw数据，这种请求方式在scrapy中难以实现，只能通过requests获得响应数据
                     然后构造下一次请求，对响应数据的清洗及入库。</span>
-                    <span style="text-indent: 2em">项目地址：<a href="#" style="color: blue">www</a>以对公司源码保密为原则只提供部分代码</span>
-
                 </span>
                 <span class="project-title">AQI天气数据抽取</span>
                 <span class="tools">开发工具： python + scrapy + scrapy_redis </span>
@@ -125,17 +123,14 @@
                 <span class="project-intro">
                     1.对网站的HTML进行代码分析；<br>
                     <span style="text-indent: 2em">2.确定xpath的数据抽取规则；</span>
-                    <span style="text-indent: 2em">3.模仿app请求的数据伪造；</span>
-                    <span style="text-indent: 2em">4.利用postman软件对伪造请求进行测试；</span>
-                    <span style="text-indent: 2em">5.使用python-requests对伪造请求进行；</span>
+                    <span style="text-indent: 2em">3.使用CrawlSpider提取页面的所有链接；</span>
+                    <span style="text-indent: 2em">4.使用selenium解决网站的动态加载问题；</span>
+                    <span style="text-indent: 2em">5.scrapy-redis分布式爬虫的部署；</span>
                     <span style="text-indent: 2em">6.对服务器返回响应的清洗和存储；</span>
-                    该项目的主要目的是获得天气详情，将数据同步更新到云平台中，该项目的技术点主要HTML分析，AQI数据获取。难点主要是
-                    使用CrawlSpider提取页面的所有链接，xpath规则书写，在中间件中使用selenium解决关键数据的动态加载问题，
-                    scrapy-redis的部署。
-                    <br>项目地址：<a href="#" style="color: blue">www</a>以对公司源码保密为原则只提供部分代码
+                    <span style="text-indent: 2em">难点主要是使用CrawlSpider提取页面的所有链接，xpath规则书写，在中间件中使用selenium解决关键数据的动态加载问题，
+                    scrapy-redis的部署。</span>
                 </span>
             </div>
-
             <div class="company">
                 <h2>石家庄科林电气股份有限公司（2017年8月）</h2>
                 <span class="project-title">用电信息云平台</span>
@@ -143,11 +138,15 @@
                 <h4 style="margin: 2px auto 2px">项目描述：</h4>
                 <span class="project-intro">
                     该项目主要是开发的主要目的是为用户提供一个便捷的用电信息查看、快捷缴费、用电历史纪录、每月用电量曲线图（互联网+）。
-                    我在此项目主要负责了用户注册，登录，密码的重置，QQ、微信等第三方登录，本项目的技术点是图片验证码部分使用的是一个
-                    第三方包（基于pillow）,注册通过手机号注册（使用阿里云短信库），手机号验证码存储到redis中。QQ、微信主要涉及的是
-                    OAuth认证。除此之外还参与了用户中心的编写，技术点包括用户权限的验证，用电信息的反馈，基本信息的展示等等，
                 </span>
                 <h4 style="margin: 2px auto 2px">项目职责：</h4>
+                <span class="project-intro">
+                    1.采用前后端分离的技术，后端接口使用DRF框架构建，前端采用模板继承的方法；<br>
+                    <span style="text-indent: 2em">2.我在此项目主要负责了用户注册，登录，密码的重置，QQ、微信等第三方登录
+                    ，本项目的技术点是图片验证码部分使用的是一个
+                    第三方包（基于pillow）,注册通过celery任务队列将验证码发送到手机号注册（使用阿里云短信库），手机号验证码存储到redis中。QQ、微信主要涉及的是
+                    OAuth认证，除此之外还参与了用户中心的编写，技术点包括用户权限的验证，用电信息的提醒使用邮箱和短信(celery任务队列)，基本信息的展示等等，</span>
+                </span>
             </div>
         </div>
     </div>
@@ -160,8 +159,11 @@
             <ul>
                 <li>
                     <span class="source-name">项目名称：M-blog</span><br>
-                    <span>一款使用python + flask写的应用博客系统，使用MyBatis作为ORM框架，写作语法支持python3。</span>
-                    <span class="source-url">源代码地址：<a href="#" style="color: blue">www.xxxxxx.com</a></span>
+                    <span style="text-indent: 2em">一款使用Python3.0 + flask写的前后端不分离的应用博客系统，前端采用jijia2语法，由子模板继承获得新的，数据库
+                        使用的是mysql数据库，通过Flask-SQLAlchemy关系型数据库框架对数据库进行操作，它提供了高层的 ORM 和底层的
+                        原生数据库的操作。</span>
+                    <span class="source-url" style="text-indent: 2em">源代码地址：<a href="#" style="color: blue"></a></span>
+
                 </li>
             </ul>
         </div>
@@ -177,7 +179,7 @@
                     <li>喜欢学习新东西，善于折腾</li>
                     <li>工作认真，细心，有很强的责任感</li>
                     <li>良好的语言沟通能力，能够积极主动交流以便解决问题</li>
-                    <li>性格外向开朗，喜欢运动，喜欢打篮球，能够独立解决问题</li>
+                    <li>性格外向开朗，喜欢运动，喜欢走路，能够独立解决问题</li>
                 </ul>
             </div>
         </div>
