--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <span class="tools">开发工具： 无 </span>
                 <h4 style="margin: 2px auto 2px">项目描述：</h4>
                 <span class="project-intro">
-                    该项目的主要功能是为独守或者短时间无法照顾的老人提供健康数据的收集，老人透过每日的设备检测将体检数据发送到云平台上，
+                    该项目的主要功能是为独守或者短时间无法照顾的老人提供健康数据的收集，老人的健康数据通过每日的设备检测将体检数据发送到云平台上，
                     通过分析得出老人的健康报告，定时定期发送给子女手机上，另外子女可以通过云监控及时的查看老人的当前状态。
                 </span>
                 <h4 style="margin: 2px auto 2px">项目职责：</h4>
@@ -162,7 +162,7 @@
                     <span style="text-indent: 2em">一款使用Python3.0 + flask写的前后端不分离的应用博客系统，前端采用jijia2语法，由子模板继承获得新的，数据库
                         使用的是mysql数据库，通过Flask-SQLAlchemy关系型数据库框架对数据库进行操作，它提供了高层的 ORM 和底层的
                         原生数据库的操作。</span>
-                    <span class="source-url" style="text-indent: 2em">源代码地址：<a href="#" style="color: blue"></a></span>
+                    <span class="source-url" style="text-indent: 2em">源代码地址：<a href="https://github.com/luomandike/luomandike.github.io/tree/master/code/m--blog" style="color: blue">https://github.com/</a></span>
 
                 </li>
             </ul>
