更改超链接颜色

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header-left">
                 <ul>
                     <li>联系方式： 17733863156</li>
-                    <li>邮   箱： <a href="mailto:2537351837@qq.com">2537351837@qq.com</a></li>
+                    <li>邮   箱： <a href="mailto:2537351837@qq.com" style="color: blue">2537351837@qq.com</a></li>
                     <li>学   历： 统招本科一批</li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
             <div class="info-right">
                 <span>籍贯： 河北</span>
                 <span>学校： 河北大学/通信工程专业</span>
-                <span>个人网站：<a href="https://luomandike.github.io/">https://luomandike.github.io/</a></span>
+                <span>个人网站：<a href="https://luomandike.github.io/" style="color: blue">https://luomandike.github.io/</a></span>
             </div>
             <div class="clear-fix"></div>
         </div>
