--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="header-title">
             <span class="author-name">牛少波</span>
-            <span class="author-intro">爱生活，爱科技！</span>
+            <span class="author-intro">爱生活，爱科技！(GitHub:<a href="https://luomandike.github.io/" style="color: blue">https://luomandike.github.io/</a>)</span>
         </div>
         <div class="header-list">
             <div class="header-left">
@@ -82,6 +82,23 @@
         <span class="long-line"></span>
         <div class="detail-list">
             <div class="company">
+                <h2>石家庄科林电气股份有限公司（2017年8月 - 2018年8月）</h2>
+                <span class="project-title">用电信息云平台</span>
+                <span class="tools">开发工具： pycharm + Django </span>
+                <h4 style="margin: 2px auto 2px">项目描述：</h4>
+                <span class="project-intro">
+                    该项目主要是开发的主要目的是为用户提供一个便捷的用电信息查看、快捷缴费、用电历史纪录、每月用电量曲线图（互联网+）。
+                </span>
+                <h4 style="margin: 2px auto 2px">项目职责：</h4>
+                <span class="project-intro">
+                    1.采用前后端分离的技术，后端接口使用DRF框架构建，前端采用模板继承的方法；<br>
+                    <span style="text-indent: 2em">2.我在此项目主要负责了用户注册，登录，密码的重置，QQ、微信等第三方登录
+                    ，本项目的技术点是图片验证码部分使用的是一个
+                    第三方包（基于pillow）,注册通过celery任务队列将验证码发送到手机号注册（使用阿里云短信库），手机号验证码存储到redis中。QQ、微信主要涉及的是
+                    OAuth认证，除此之外还参与了用户中心的编写，技术点包括用户权限的验证，用电信息的提醒使用邮箱和短信(celery任务队列)，基本信息的展示等等，</span>
+                </span>
+            </div>
+            <div class="company">
                 <h2>北京乔松健康网络科技有限公司（保定）（2016年1月-2017年6月）</h2>
                 <span class="project-title">乔松健康管家、一划赚等项目</span>
                 <span class="tools">开发工具： 无 </span>
@@ -129,23 +146,6 @@
                     <span style="text-indent: 2em">6.对服务器返回响应的清洗和存储；</span>
                     <span style="text-indent: 2em">难点主要是使用CrawlSpider提取页面的所有链接，xpath规则书写，在中间件中使用selenium解决关键数据的动态加载问题，
                     scrapy-redis的部署。</span>
-                </span>
-            </div>
-            <div class="company">
-                <h2>石家庄科林电气股份有限公司（2017年8月）</h2>
-                <span class="project-title">用电信息云平台</span>
-                <span class="tools">开发工具： pycharm + Django </span>
-                <h4 style="margin: 2px auto 2px">项目描述：</h4>
-                <span class="project-intro">
-                    该项目主要是开发的主要目的是为用户提供一个便捷的用电信息查看、快捷缴费、用电历史纪录、每月用电量曲线图（互联网+）。
-                </span>
-                <h4 style="margin: 2px auto 2px">项目职责：</h4>
-                <span class="project-intro">
-                    1.采用前后端分离的技术，后端接口使用DRF框架构建，前端采用模板继承的方法；<br>
-                    <span style="text-indent: 2em">2.我在此项目主要负责了用户注册，登录，密码的重置，QQ、微信等第三方登录
-                    ，本项目的技术点是图片验证码部分使用的是一个
-                    第三方包（基于pillow）,注册通过celery任务队列将验证码发送到手机号注册（使用阿里云短信库），手机号验证码存储到redis中。QQ、微信主要涉及的是
-                    OAuth认证，除此之外还参与了用户中心的编写，技术点包括用户权限的验证，用电信息的提醒使用邮箱和短信(celery任务队列)，基本信息的展示等等，</span>
                 </span>
             </div>
         </div>
