第三次修改简历

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </div>
             <div class="header-right">
                 <ul>
-                    <li>期望职位： python后端开发工程师</li>
-                    <li>期望城市： 北京，石家庄</li>
-                    <li>当前坐标： 北京</li>
+                    <li>期望职位： python后端开发工程师， python爬虫工程师</li>
+                    <li>期望城市： 石家庄</li>
+                    <li>当前坐标： 石家庄</li>
                 </ul>
             </div>
             <div class="clear-fix"></div>
@@ -65,10 +65,10 @@
             <ul>
                 <li>前端： Javascript(熟悉)/JQuery(熟悉)/Vue(熟悉)/css(熟悉)/html(熟悉)</li>
                 <li style="color: red; font-size: large">后端： Flask(熟练)/Django(熟练)</li>
-                <li>爬虫： Scrapy(熟悉)/python_requests(熟悉)</li>
+                <li style="color: red; font-size: large">爬虫： Scrapy(熟练)/python_requests(熟练)</li>
                 <li>数据清洗： xpath(熟悉)/lxml(熟悉)/bs4(熟悉)/Regex(熟悉)/json(熟悉)</li>
                 <li>数据库： MySQL(熟练)/redis(熟练)/sqlite(熟练)</li>
-                <!--<li>解决网页动态加载：熟练使用Selenium实施动态HTML抓取</li>-->
+                <li>解决网页动态加载：熟练使用Selenium实施动态HTML抓取</li>
                 <li>服务器相关： 熟悉Linux基本命令/了解docker基本操作</li>
                 <li>版本控制软件： 熟练使用git/svn等源代码版本控制工具</li>
                 <li>常用软件： fiddle、wireshark、pycharm、jupyter notebook、sublime</li>
@@ -76,18 +76,40 @@
         </div>
     </div>
 
+
     <div class="work-experience">
         <span class="icon"></span>
         <span class="subtitle">工作经历</span>
         <span class="long-line"></span>
         <div class="detail-list">
             <div class="company">
-                <h2>石家庄科林电气股份有限公司（2017年8月 - 2018年8月）</h2>
+                <h2>北京多吃水果有限公司（2018年7月 - 2019年2月）</h2>
+                <span class="project-title">去广告app</span>
+                <span class="tools">开发工具： pycharm + Flask </span>
+                <h4 style="margin: 2px auto 2px">项目描述：</h4>
+                <span class="project-intro">
+                    为用户解决各大视频网站的频繁加载广告的烦恼，通过抓包工具对手机app进行抓包，通过对response的分析，
+                    判断各种视频网站的广告加载方式，修改广告部分的response以达到去除广告的限制，同时通过编写抖音、
+                    一点资讯等无水印视频爬虫，筛选质量较高的视频内容推送到手机app端。
+                </span>
+                <h4 style="margin: 2px auto 2px">项目职责：</h4>
+                <span class="project-intro">
+                    1.对各大视频网站app的抓包分析，通过对response分析制定去广告规则；<br>
+                    <span style="text-indent: 2em">2.使用flask搭建网站后台，提供接口供手机端访问；</span>
+                    <span style="text-indent: 2em">3.完成网站后台的全部内容，包括流量控制，用户和管理员数据库建模，用户权限管理等。</span>
+                    <span style="text-indent: 2em">4.通过编写python_requests库编写多线程爬虫程序，将优质视频文件保存下来，推送到app端。</span>
+                    <span style="text-indent: 2em">5.通过smtp服务发送广告邮件，通过广告邮件进行营销。</span>
+                    <span style="text-indent: 2em">6.一些io操作都是通过celery框架来实现，</span>
+                    <span style="text-indent: 2em">7.书写接口api文档，指定符合RESTful风格url匹配规则。</span>
+                </span>
+            </div>
+            <div class="company">
+                <h2>石家庄科林电气股份有限公司（2017年8月 - 2018年6月）</h2>
                 <span class="project-title">用电信息云平台</span>
                 <span class="tools">开发工具： pycharm + Django </span>
                 <h4 style="margin: 2px auto 2px">项目描述：</h4>
                 <span class="project-intro">
-                    该项目主要是开发的主要目的是为用户提供一个便捷的用电信息查看、快捷缴费、用电历史纪录、每月用电量曲线图（互联网+）。
+                    该项目开发的主要目的是为用户提供一个便捷的用电信息查看、快捷缴费、用电历史纪录、每月用电量曲线图（互联网+）。
                 </span>
                 <h4 style="margin: 2px auto 2px">项目职责：</h4>
                 <span class="project-intro">
